# coli

./: .gitignore  Cargo.toml  readme.md  todo.md
.github/workflows/: release.yml
src/: gradient.rs  lib.rs  main.rs  random.rs  recent.rs  rgb.rs  trending.rs  utils.rs
