[package]
name = "coli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
owo-colors = "3.5.0"
palette = "0.6.1"
rand = "0.8.5"
hex = "0.4"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
regex = "1.6.0"
